[package]
name = "via-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.4", features = ["ws"] }
chrono = { version = "0.4.34", features = ["serde"] }
color-eyre = "0.6.2"
dotenvy = "0.15.7"
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["postgres", "uuid", "chrono", "runtime-tokio"] }
structopt = "0.3.26"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["net", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.7.0", features = ["serde"] }
