[package]
name = "via-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.2"
dotenvy = "0.15.7"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.3", features = ["postgres", "uuid", "chrono", "runtime-tokio"] }
structopt = "0.3.26"
tokio = { version = "1.36.0", features = ["fs", "rt-multi-thread", "time", "sync", "signal"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
reqwest = "0.11.24"
soup = "0.5.1"
futures = "0.3.30"
tempfile = "3.10.1"
image = { version = "0.24.9", features = ["png"] }
csv-async = { version = "1.3.0", features = ["tokio"] }
regex = "1.10.3"
lazy_static = "1.4.0"
async-compression = { version = "0.4.6", features = ["gzip", "tokio"] }
indicatif = "0.17.8"
nalgebra = "0.32.4"
palette = "0.7.5"
strum = { version = "0.26.1", features = ["derive"] }
num_cpus = "1.16.0"
